# svc-weave

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  caddy.fragment  compose.fragment.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy.yml
app/: auth.py  bootstrap.py  config.py  graph.py  llm.py  main.py  routes_admin.py  routes_edges.py  routes_extractions.py  routes_nodes.py  routes_prompts.py  routes_status.py  routes_syntheses.py  routes_telegram.py  schema.py  schema.yml  serializer.py  watcher.py  worker.py  writes.py
tests/: test_extraction_roundtrip.py  test_schema_validation.py  test_synthesis_roundtrip.py
